Every classpath launcher jk renders passes --enable-native-access=ALL-UNNAMED on a JDK that knows the flag
A java -cp program is one unnamed module, and a restricted FFM call from it —
jk's own terminal layer makes one on the first TTY touch — prints a four-line
JDK warning naming a jar path on every run that reaches it, which reads as a
broken install and pollutes every log a CI job captures. The launcher grants
the access up front; a JDK older than the flag, read from its release file,
gets a launcher it can start.

JK-3218